# AI-DRIVEN-HONEYPOT-SYSTEM

./: .dockerignore  .env.example  .gitignore  FILE_INDEX.md  README.md  TODO-RENAME.md  TODO.md  alembic.ini  docker-compose.yml  issue_body.md  pyproject.toml  requirements.txt  tmp.txt
Backend/: honeypot.py  products.py
Backend/app/detectors/: ml_detector.py
Backend/app/middleware/: auth.py  fingerprint.py
Backend/app/models/: attack_log.py
Backend/app/routers/: health.py  honeypot.py
Backend/app/schemas/: session.py
Backend/app/services/: honeypot_service.py  session_service.py
Backend/core/: config.py  database.py  redis.py
Backend/templates/: admin_login.html  checkout.html  login.html  signup.html
docker/: Dockerfile  docker-compose.yml
flask_frontend/: Dockerfile  app.py  config.py  requirements.txt
flask_frontend/routes/: auth.py  dashboard.py  environments.py  sandbox.py
flask_frontend/services/: fastapi_client.py
flask_frontend/static/css/: main.css
flask_frontend/templates/: base.html  dashboard.html  environments.html  landing.html
flask_frontend/templates/auth/: login.html  signup.html
flask_frontend/templates/carding/: ecomm_checkout.html  gift_card_store.html
flask_frontend/templates/partials/: score_overlay.html
flask_frontend/templates/path_traversal/: admin_panel.html  file_manager.html
flask_frontend/templates/sqli/: banking_login.html  corporate_portal.html
flask_frontend/templates/xss/: forum.html  social_feed.html
flask_frontend/tests/: conftest.py  test_auth.py  test_dashboard.py  test_environments.py  test_fastapi_client.py  test_sandbox.py
src/: 3.1.1  Dockerfile  TODO.md  alembic.ini  attack_logs.json  pyproject.toml  requirements.txt
src/alembic/: env.py  script.py.mako
src/alembic/versions/: 001_create_sessions.py  002_create_attack_logs.py  003_sandbox_models.py
src/app/: __init__.py  main.py
src/app/core/: __init__.py  dependencies.py
src/app/detectors/: ml_detector.py  rule_detector.py
src/app/generators/: fake_data.py
src/app/middleware/: __init__.py  auth.py  logging_mw.py  rate_limit.py  service_auth.py
src/app/models/: __init__.py  attack_log.py  sandbox.py
src/app/routers/: admin.py  auth.py  honeypot.py  sandbox.py  scoring.py  users.py
src/app/schemas/: attack.py  sandbox.py
src/app/services/: badge_service.py  geo_service.py  honeypot_service.py  logging_service.py
src/core/: config.py  database.py  metrics.py  redis.py  security.py
src/static/css/: main.css
src/templates/: admin_login.html  dashboard.html  login.html  product.html  signup.html
