[project]
name = "ai-honeypot"
version = "1.0.0"
description = "AI-Driven Honeypot System"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.0",
    "transformers==4.41.2",
    "torch==2.6.0",
    "scikit-learn==1.5.0",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "sqlalchemy==2.0.32",
    "aiosqlite==0.20.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "pydantic==2.7.4",
    "httpx==0.27.0",
    "loguru==0.7.2",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "greenlet>=3.4.0",
    "pydantic-settings>=2.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app", "src/core"]



