[project]
name = "ai-honeypot"
version = "1.0.0"
description = "AI-Driven Honeypot System"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.0",
    "transformers==4.41.2",
    "prometheus-fastapi-instrumentator==7.1.0",
    "torch==2.3.1",
    "scikit-learn==1.5.0",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "sqlalchemy==2.0.32",
    "aiosqlite==0.20.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "pydantic==2.7.4",
    "httpx==0.27.0",
    "loguru==0.7.2",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "slowapi==0.1.9",
    "greenlet>=3.4.0",
    "pydantic-settings>=2.13.1",
    "redis==5.0.8",
    "flask>=3.0.0",
    "flask-session>=0.8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-flask>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app", "src/core"]

[dependency-groups]
dev = [
    "pytest-mock>=3.15.1",
]



